--- a/WallHavenGetter/WallHavenGetter/NLog.config
+++ b/WallHavenGetter/WallHavenGetter/NLog.config
@@ -15,7 +15,7 @@
 	<targets>
 		<!-- 输出到文件 -->
 		<target xsi:type="File" name="allfile" fileName="${basedir}/Logs/${shortdate}/${level}.log"
-				layout="${longdate}|${event-properties:item=EventId_Id:whenEmpty=0}:${message} ${exception:format=tostring}" />
+				layout="${longdate}|${threadid}:${message} ${exception:format=tostring}" />
 
 		<!-- 输出到控制台 -->
 		<target xsi:type="Console" name="lifetimeConsole" layout="${level:truncate=4:tolower=true}\: ${logger}[0]${newline}      ${message}${exception:format=tostring}" />
