fix:优化下载，初步增加暂停下载功能

--- a/WallHavenGetter/WallHavenGetter/WallHavenGetter.csproj
+++ b/WallHavenGetter/WallHavenGetter/WallHavenGetter.csproj
@@ -40,6 +40,9 @@
   </ItemGroup>
 
   <ItemGroup>
+    <None Update="application.ini">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
     <None Update="NLog.config">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
