--- a/WallHavenGetter/WallHavenGetter/WallHavenGetter.csproj
+++ b/WallHavenGetter/WallHavenGetter/WallHavenGetter.csproj
@@ -15,9 +15,9 @@
   <ItemGroup>
     <PackageReference Include="HtmlAgilityPack" Version="1.11.42" />
     <PackageReference Include="ImageListView" Version="13.8.2" />
+    <PackageReference Include="Jt.Common.Tool" Version="1.0.2" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="6.0.0" />
     <PackageReference Include="Microsoft.Extensions.Logging" Version="6.0.0" />
-    <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
     <PackageReference Include="NLog.Extensions.Logging" Version="1.7.4" />
   </ItemGroup>
 
